--- a/src/components/css/global.css
+++ b/src/components/css/global.css
@@ -31,10 +31,12 @@
 
 }
 .prolist{
+    max-width: calc(50% - 10px);
     width: 100%;
     height: 100%;
 }
 .contralist{
+    max-width: calc(50% - 10px);
     width: 100%;
     height: 100%;
     margin-right: 20px;
